# hello-world

./: Cargo.toml
src/: main.rs
static/: styles.css
static/css/: style.css
static/html/: announcements.html  blog.html  index.html  pagenotfound.html
templates/: index.html
