[package]
name = "detail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
serde_json = "1.0"
strsim = "0.10"
maud = "0.25"
